Wed May 18 11:19:59 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_bn.c (try_convert_to_bnptr): Extracted from
	  GetBNPtr(). This doesn't raise exception but returns NULL on error.
	  (GetBNPtr): Raise TypeError if conversion fails.
	  (ossl_bn_eq): Implement BN#==.
	  (ossl_bn_eql): #eql? should not raise TypeError even if the argument
	  is not compatible with BN.
	  (ossl_bn_hash): Implement BN#hash.

	* ext/openssl/ossl_bn.c (Init_ossl_bn): Define #== and #hash.

	* test/openssl/test_bn.rb: Test BN#eql?, #== and #hash

Wed May 18 10:17:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_INTEGER_TYPE_P): new macro and
	  underlying inline function to check if the object is an
	  Integer (Fixnum or Bignum).

Wed May 18 09:52:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (enum_sum, hash_sum, hash_sum_i, enum_sum_i, sum_iter):
	  Optimize for hashes when each method isn't redefined.

Wed May 18 09:14:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (enum_sum, int_range_sum): Extract int_range_sum from
	  enum_sum.

Wed May 18 03:16:06 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (match_values_at): fix regression at r55036.
	  MatchData#values_at accepts Range.

Wed May 18 02:02:58 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (match_aref): remove useless condition and call rb_fix2int.
	  rb_reg_nth_match handles negative index.

Wed May 18 01:57:43 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (match_values_at): MatchData#values_at supports named captures
	  [Feature #9179]

	* re.c (namev_to_backref_number): separeted.

Wed May 18 00:05:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (enum_sum): Optimize for a range from int to int.

	* test/ruby/test_enum.rb (test_range_sum): Move from test_range.rb,
	  and add assertions for some conditions.

	* test/ruby/test_enum.rb (test_hash_sum): Move from test_hash.rb.

	* test/ruby/test_hash.rb, test/ruby/test_range.rb: Remove test_sum.
